# hermes

./: .clang-format  .gitignore  AUTHORS.md  CMakeLists.txt  LICENSE  README.md  build.sh  devrun.sh  sonar-project.properties
.github/workflows/: ci.yml  clang_format.yml  sonar.yml  unit_test.yml
cmake/: hermes_build_system.cmake
doc/: dev_info.md  hermes_output.md  traffic_script.md
doc/diagrams/: api-rest-flow-example.puml  client-send-positive-case.puml  http-flow.puml  http2-connection-flow.puml
docker/: Dockerfile  README.md
docker/base/: Dockerfile
docker/dockerfiles/prod/: Dockerfile
docker/server-mock/: Dockerfile
docs/diagrams/: connection_test_flow.puml  main.puml  sender.puml
env/: README.md  setup.sh
env/dockerfiles/base/: Dockerfile
env/dockerfiles/prod/: Dockerfile
ft/h2server/: h2server.go  otel.go
helm/: .gitignore
helm/example-hermes/: Chart.yaml  hermes-dashboard.json  requirements.yaml  values.yaml
helm/example-hermes/templates/: _helpers.tpl  deployment.yaml  grafana-dashboard-cm.yaml  service.yaml  traffic.script.yaml
helm/example-hermes/templates/tests/: test-connection.yaml
helm/hermes/: Chart.yaml  values.yaml
helm/hermes/templates/: _helpers.tpl  deployment.yaml
scripts/: generate_certs_for_ut_server.sh
src/: CMakeLists.txt  Makefile  main.cpp
src/config/: CMakeLists.txt  params.hpp
src/http2_client/: CMakeLists.txt  client.hpp  client_impl.cc  client_impl.cpp  client_impl.hh  client_impl.hpp  client_utils.cpp  client_utils.hpp  connection.cc  connection.cpp  connection.hh  connection.hpp
src/o11y/: CMakeLists.txt  metrics.cpp  metrics.hpp  observability.cpp  observability.hpp  tracer.cpp  tracer.hpp
src/script/: CMakeLists.txt  json_reader.cpp  json_reader.hpp  script.cpp  script.hpp  script_functions.cpp  script_functions.hpp  script_queue.cpp  script_queue.hpp  script_queue_if.hpp  script_reader.cpp  script_reader.hpp  script_schema.hpp  script_sctructs.hpp  script_structs.hpp
src/sender/: CMakeLists.txt  sender.cpp  sender.hpp  timer.hpp  timer_impl.cpp  timer_impl.hpp
src/stats/: CMakeLists.txt  stats if.hpp  stats.cpp  stats.hpp  stats_if.hpp
ut/: CMakeLists.txt
ut/helpers/: CMakeLists.txt  action_builder.cpp  action_builder.h  action_builder.hpp  json_element_builder.cpp  json_element_builder.h  json_element_builder.hpp  json_object_builder.cpp  json_object_builder.h  json_object_builder.hpp  message_builder.cpp  message_builder.h  message_builder.hpp  range_builder.cpp  range_builder.h  range_builder.hpp  response_builder.cpp  response_builder.h  response_builder.hpp  script_builder.cpp  script_builder.h  script_builder.hpp
ut/http2_client/: CMakeLists.txt  client_test.cpp  client_utils_test.cpp  connection_test.cpp  tlsConnection_test.cpp  traces_test.cpp
ut/o11y/: CMakeLists.txt  o11y_test.cpp  tracer_test.cpp
ut/script/: CMakeLists.txt  json_reader_test.cpp  script_functions_test.cpp  script_queue_test.cpp  script_reader_test.cpp  script_test.cpp
ut/sender/: CMakeLists.txt  sender_test.cpp  timer_test.cpp
ut/ssl/: generateCryptographicMaterial
ut/stats/: CMakeLists.txt  stats_sut.cpp  stats_test.cpp  stats_test_extended.cpp
